Fixed text align below 550px

--- a/stylesheets/_SMsidebar.scss
+++ b/stylesheets/_SMsidebar.scss
@@ -79,3 +79,10 @@
         }
     }
 }
+
+
+@media screen and (max-width: 550px) {
+    .miniIntroP{
+        text-align: left!important;
+    }
+}
