--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -74,3 +74,8 @@
 
 }
 
+@media screen and (max-width: 550px) {
+    .aboutMeP{
+        text-align: left!important;
+    }
+}
